# st-chatbar-media

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: demo_app.py
frontend/: package-lock.json  package.json
frontend/src/: ChatbarMedia.tsx  chatbar_media.css  index.tsx
scripts/: demo.ps1  dev.ps1  release.ps1  sync_frontend.mjs
st_chatbar_media/: __init__.py
st_chatbar_media/frontend/build-v2/: chatbar_media.css  chatbar_media.js
